--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li>Lesson 08: <a href="lesson8/stormcenter.html">Storm Center</a> | <a href="lesson8/tablebuild.html">Table Build</a></li>
         <li>Lesson 09: <a href="lesson9/prophets.html">Prophets page</a> | <a href="">Home Page</a></li>
         <li>Lesson 10: <a href="lesson10/preston-10.html">Preston Weather API</a></li>
-        <li>Lesson 11: <a href="#"></a></li>
+        <li>Lesson 11: <a href="lesson11/index.html">Weather Site Final Submission</a></li>
         <li>Lesson 12: <a href="#"></a></li>
         <li>Lesson 13: <a href="#"></a></li>
         <li>Lesson 14: <a href="#"></a></li>
